# AgentRelay

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  fly.toml  hook.py  pyproject.toml
agentrelay/: auth.py  cli.py  dispatcher_client.py  keepalive.py  keychain.py  manifest.py  risk.py  server.py  service.py  sessions.py  setup.py  status.py  tunnel.py  wizard.py
agentrelay/adapters/: base.py  slack.py  sms.py
deploy/: README.md  agentrelay.service
dispatcher/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
dispatcher/src/: index.ts  install.ts  types.ts
