[project]
name = "agentrelay"
version = "0.1.0"
description = "Async supervision layer for autonomous coding agents — approve risky actions and catch stalls from your phone."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "twilio>=9.0",
]

[project.scripts]
agentrelay = "agentrelay.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentrelay"]
